[workspace]
resolver = "2"
members = [
    "engine-base"
]

[workspace.package]
rust-version = "1.76.0"
version = "0.1.0"
repository = "https://github.com/matthewd0123/rust-game-engine"
homepage = "https://github.com/matthewd0123"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = { version = "0.1" }

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"